# OpenDocs

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  ROADMAP.md  _test_ink.py  package-lock.json  pyproject.toml  test_agents_llm.py
.claude/skills/opendocs/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: generate-docs.yml  pages.yml  publish.yml  quality.yml  test.yml
api/: __init__.py  server.py
docs/: CNAME  index.html
examples/: opendocs.yaml  sample_notebook.ipynb  sample_readme.md
generated-docs/: README_analysis.md
src/ioteverything/: __init__.py  cli.py  pipeline.py
src/ioteverything/core/: knowledge_graph.py  models.py  parser.py
src/ioteverything/generators/: base.py  diagram_extractor.py  mermaid_renderer.py  pdf_generator.py  pptx_generator.py  smart_report.py  styles.py  table_sorter.py  themes.py  word_generator.py
src/ioteverything/llm/: __init__.py  llm_extractor.py
src/opendocs/: __init__.py  cli.py  pipeline.py
src/opendocs/agents/: __init__.py  base.py  critic.py  evidence.py  executor.py  llm_client.py  orchestrator.py  planner.py  privacy.py
src/opendocs/core/: __init__.py  code_analyzer.py  fetcher.py  folder_merger.py  knowledge_graph.py  models.py  narrative_generator.py  notebook_parser.py  parser.py  semantic_extractor.py  template_doc_generator.py  template_vars.py  watcher.py
src/opendocs/docagent/: __init__.py  agent_loop.py  cli.py  config.py  llm_client.py  session.py
src/opendocs/generators/: __init__.py  ai_readers.py  architecture_generator.py  base.py  blog_generator.py  changelog_generator.py  diagram_extractor.py  faq_generator.py  graph_export.py  interactive_graph.py  jira_generator.py  latex_generator.py  mermaid_renderer.py  mindmap_generator.py  onepager_generator.py  pdf_generator.py  pptx_generator.py  smart_report.py  social_generator.py  styles.py  table_sorter.py  themes.py  wiki_export.py  word_generator.py
src/opendocs/llm/: __init__.py  llm_extractor.py  providers.py  slm_finetune.py  slm_provider.py
src/opendocs/publishers/: __init__.py  confluence_publisher.py  notion_publisher.py
tests/: test_agents.py  test_agents_integration.py  test_agents_llm.py  test_architecture.py  test_code_analyzer.py  test_fetcher.py  test_generators.py  test_knowledge_graph.py  test_llm.py  test_mermaid.py  test_narrative_generator.py  test_new_generators.py  test_parser.py  test_pipeline.py  test_semantic_extractor.py  test_table_sorter.py  test_template_doc_generator.py  test_themes.py
(+50 files in other folders)
