[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendocs"
version = "0.5.1"
description = "Convert GitHub README files into structured multi-format documentation artifacts."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ioteverythin", email = "contact@ioteverythin.com"},
]
maintainers = [
    {name = "ioteverythin"},
]
keywords = ["documentation", "readme", "github", "docx", "pdf", "pptx", "opendocs", "iot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "httpx>=0.27",
    "mistune>=3.0",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "reportlab>=4.1",
    "pydantic>=2.5",
    "rich>=13.7",
    "click>=8.1",
    "docx2pdf>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
llm = [
    "openai>=1.12",
    "langchain>=0.1",
    "langgraph>=0.0.30",
]
anthropic = [
    "anthropic>=0.30",
]
google = [
    "google-generativeai>=0.5",
]
ollama = [
    "openai>=1.12",
]
azure = [
    "openai>=1.12",
]
all-providers = [
    "openai>=1.12",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "langchain>=0.1",
    "langgraph>=0.0.30",
]
agents = [
    "openai>=1.12",
    "anthropic>=0.30",
    "google-generativeai>=0.5",
    "langchain>=0.1",
    "langgraph>=0.0.30",
    "matplotlib>=3.8",
    "httpx>=0.27",
]
templates = [
    "pyyaml>=6.0",
]
watch = [
    "pyyaml>=6.0",
]

[project.scripts]
opendocs = "opendocs.cli:main"
docagent = "opendocs.docagent.cli:main"

[project.urls]
Homepage = "https://www.ioteverythin.com/"
Documentation = "https://www.ioteverythin.com/"
Repository = "https://github.com/ioteverythin/OpenDocs"
Issues = "https://github.com/ioteverythin/OpenDocs/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["opendocs.agents", "opendocs.agents.*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
